Fixed invisible speaker names when no photo

--- a/_sass/partials/_lily-effect.scss
+++ b/_sass/partials/_lily-effect.scss
@@ -59,7 +59,7 @@
         height: 50%;
         padding: 32px 16px;
         text-transform: uppercase;
-        color: #fff;
+        color: #333;
         h2, p {
             @media (max-width: 767px) {
                 transform: translateY(-25px);
